src/test/deca/syntax/valid/created/printlnx.deca
{
printlnx(5.2256);
}
