src/test/deca/syntax/invalid/created/faux53.deca
{
	while(5 / 0){

	}
}
